<resources>
    <string name="app_name">li-ming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="set_head_photo">set head photo</string>
    <string name="album">album</string>
    <string name="photograph">Photograph</string>
    <string name="account">account</string>
    <string name="password">password</string>
    <string name="remember_account">remember account</string>
    <string name="login">Login</string>
    <string name="sign_up">sign up</string>
    <string name="member_information">Member information</string>
    <string name="nick_name">nick name</string>
    <string name="sign_out">Sign out</string>
    <string name="message">Message</string>
    <string name="search_result">Search Result</string>
    <string name="send">send</string>
    <string name="signup">SignUp</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="person">Person</string>
    <string name="popular_recommendation">Popular Recommendation</string>
    <string name="login_success">Login success</string>
    <string name="login_failed">Login Failed</string>
    <string name="ok">OK</string>
    <string name="password_error">password error</string>
    <string name="Please_enter_8to12_letters_or_numbers">Please enter 8–12 letters or numbers</string>
    <string name="account_error">account error</string>
    <string name="Please_enter_4to20_letters_or_numbers">Please enter 4–20 letters or numbers</string>
    <string name="leave">Leave</string>
    <string name="Are_you_sure_you_want_to_leave">Are you sure you want to leave</string>
    <string name="signup_error">signup error</string>
    <string name="please_enter_your_nickname">Please enter your nickname</string>
    <string name="guest">Guest</string>
</resources>